# aura-exp-sniffer

./: README.md  pyproject.toml
aura_exp_sniffer/: exp_cloud_requests.py  file_utils.py  main.py  message_utils.py
aura_exp_sniffer/request_templates/: $ACTION$updateRecord.json  IGNORELIST-NAMESPACE.json  IGNORELIST-STANDARD-SOBJECTS.json
