[tool.poetry]
name = "aura-exp-sniffer"
version = "0.1.0"
description = "A simple security research tool to access undocumented Aura APIs"
authors = ["Ch. Szandor Knapp <szandor72@gmail.com>"]
readme = "README.md"
include = ["aura_exp_sniffer/request_templates/**"]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.12.3"}
requests = "^2.32.3"

[tool.poetry.scripts]
aura-exp-sniffer = "aura_exp_sniffer.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
